--- a/package.json
+++ b/package.json
@@ -22,19 +22,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "test:coverage": "react-scripts test --coverage --watchAll=false",
-    "test:ci": "react-scripts test --coverage --watchAll=false --ci",
-    "eject": "react-scripts eject",
-    "cypress:open": "cypress open",
-    "cypress:run": "cypress run",
-    "cypress:run:chrome": "cypress run --browser chrome",
-    "cypress:run:firefox": "cypress run --browser firefox",
-    "cypress:run:edge": "cypress run --browser edge",
-    "cypress:run:headless": "cypress run --headless",
-    "test:e2e": "cypress run",
-    "test:e2e:open": "cypress open",
-    "test:e2e:ci": "cypress run --headless --browser chrome",
-    "test:all": "npm run test:ci && npm run test:e2e:ci"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
@@ -55,9 +43,6 @@
     ]
   },
   "devDependencies": {
-    "@cypress/react": "^9.0.1",
-    "@cypress/webpack-dev-server": "^5.1.1",
-    "cypress": "^15.2.0",
     "tailwindcss": "^3.4.3"
   }
 }
