--- a/.env
+++ b/.env
@@ -1,2 +1,10 @@
-REACT_APP_VAPI_API_KEY=b8d9ef8e-25ed-4391-9b9a-8f1bdf0d9b20
-REACT_APP_VAPI_PUBLIC_KEY=55367510-df05-4ce1-876b-80d8fea189a4
+# VAPI API Configuration
+REACT_APP_VAPI_API_KEY=00c60c9f-62b3-4dd3-bede-036242a2b7c5
+
+# Firebase Configuration (if needed for environment-specific configs)
+# REACT_APP_FIREBASE_API_KEY=your_firebase_api_key
+# REACT_APP_FIREBASE_AUTH_DOMAIN=your_auth_domain
+# REACT_APP_FIREBASE_PROJECT_ID=your_project_id
+
+# Other environment variables
+NODE_ENV=production
