Update app design to match marketing page aesthetics with new hero background and cyan-blue-indigo theme

--- a/package.json
+++ b/package.json
@@ -34,12 +34,18 @@
     "production": [
       ">0.2%",
       "not dead",
-      "not op_mini all"
+      "not op_mini all",
+      "ie 11",
+      "chrome >= 60",
+      "firefox >= 60",
+      "safari >= 12",
+      "ios >= 12",
+      "android >= 7"
     ],
     "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
+      "last 3 chrome version",
+      "last 3 firefox version",
+      "last 3 safari version"
     ]
   },
   "devDependencies": {
